# Spool

./: .coderabbit.yaml  .gitignore  AddGameWindow.xaml  AddGameWindow.xaml.cs  App.xaml  App.xaml.cs  BrowseWindow.xaml  BrowseWindow.xaml.cs  CLAUDE.md  Config.cs  Converters.cs  DownloadLocationWindow.xaml  DownloadLocationWindow.xaml.cs  GEMINI.md  GameLibrary.cs  HydraSourceClient.cs  IDialogService.cs  LICENSE  LanDownloadWindow.xaml  LanDownloadWindow.xaml.cs  LanShare.cs  LauncherGenerator.cs  LudusaviModels.cs  LudusaviWrap.csproj  MainWindow.xaml  MainWindow.xaml.cs  MainWindowResources.xaml  PlayStateLockClient.cs  README.md  RegistryHelper.cs  RunWindow.xaml  RunWindow.xaml.cs  RunWorkflow.cs  SetupWindow.xaml  SetupWindow.xaml.cs  Spool.csproj  SteamGridDbClient.cs  SteamIntegration.cs  SuccessWindow.xaml  SuccessWindow.xaml.cs  (+11 more)
.agents/: mcp_config.json
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml
.github/workflows/: bump-release.yml  ci.yml  debug-token.yml  decky.yml  docs.yml  e2e.yml  release.yml  screenshots.yml  server-publish.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
Spool.Tests/: GameEntryBuilder.cs  GameEntryTests.cs  GameLibraryTests.cs  LauncherGeneratorTests.cs  RunWorkflowTests.cs  Spool.Tests.csproj
decky/: .gitignore  README.md  backup_logic.py  main.py  package.json  plugin.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  tsconfig.json
decky/.storybook/: README.md  main.ts  preview-head.html  preview.ts  steam-chrome.tsx
decky/.storybook/mocks/: decky-api.tsx  decky-ui.tsx  fixtures.ts  registry.ts
decky/src/: constants.ts  index.tsx  types.ts
decky/src/api/: callables.ts
decky/src/components/: add-to-steam-list.stories.tsx  add-to-steam-list.tsx  content.stories.tsx  content.tsx  cover-grid.stories.tsx  cover-grid.tsx  game-detail-panel.tsx  install-deps-modal.stories.tsx  install-deps-modal.tsx  lan-view.stories.tsx  lan-view.tsx  library-grid.tsx  peer-game-detail-panel.stories.tsx  peer-game-detail-panel.tsx  peer-games.stories.tsx  peer-games.tsx  playtime-badge.tsx  playtime-patch-wrapper.tsx  proton-version-modal.stories.tsx  proton-version-modal.tsx  revision-picker-modal.stories.tsx  revision-picker-modal.tsx  safe-area.tsx  spool-mark.stories.tsx  spool-mark.tsx  spool-page.tsx
decky/src/hooks/: use-backing-up.ts  use-now.ts  use-server-base.ts  use-spool-playtime.ts
decky/src/lib/: appid-map.ts  backup-status.ts  format.ts  launch.ts  server.ts  steam-chrome.ts  steam.ts
decky/tests/: test_backup_logic.py
docs/: sqlite-migration-plan.md
docs-site/: README.md  astro.config.mjs  package.json
docs-site/public/: CNAME
docs-site/src/components/: Footer.astro
docs/dev/: ludusavi-config-notes.md  phase4-plan.md  proton-save-sync-plan.md  save-restore-debug.md
docs/superpowers/plans/: 2026-05-29-steamos-gamemode-attached-launch.md  2026-05-29-touch-mode-pr1-density-tokens.md  2026-05-29-touch-mode-pr2-mode-flag.md  2026-05-29-touch-mode-pr3-nav-chrome.md  2026-05-29-touch-mode-pr4-library-controller.md  2026-05-30-decky-forced-close-backup.md
docs/superpowers/specs/: 2026-05-29-steamos-gamemode-attached-launch-design.md  2026-05-30-decky-forced-close-backup-design.md
packaging/aur/spool-bin/: .SRCINFO  .gitignore  PKGBUILD  README.md
scripts/: install-appimage.sh
server/: .env.example  Dockerfile  Dockerfile.rclone  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json  rclone-auth-proxy.sh  tsconfig.json  vitest.config.ts
server/src/: app.ts  db.test.ts  db.ts  index.ts  test-utils.ts
server/src/middleware/: auth.ts
server/src/routes/: auth.test.ts  auth.ts  events.ts  internal.ts  last-played.ts  locks.test.ts  locks.ts  playtime.ts  storage.test.ts  storage.ts
tauri/: .gitignore  BACKEND.md  REWRITE.md  eslint.config.js  package.json  vite.config.js  vitest-setup.ts  vitest.config.ts  wdio.conf.ts
tauri/.storybook/: ConfirmHostDecorator.svelte  LibraryHarness.svelte  SavesPanelHarness.svelte  SplashHarness.svelte  TauriMockDecorator.svelte  ToastHarness.svelte  fixtures.ts  main.ts  preview-head.html  preview.ts  tauri-mock.ts
tauri/design/transfers-v2/: README.md
tauri/e2e/: tsconfig.json
tauri/e2e/fixtures/: library.ts
tauri/e2e/specs/: library-seeded.e2e.ts  library.e2e.ts
tauri/scripts/: build-appimage.sh  dev-link-appimage.sh  dev-unlink-appimage.sh  download-sidecars.js  gen-steam-art.mjs  screenshots.mjs
tauri/src/: app.css  app.html
tauri/src-tauri/: .env.example  .gitignore  Cargo.toml  build.rs  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/migrations/: 0001_init.sql
tauri/src-tauri/src/: accent_backfill.rs  browse_download.rs  cli.rs  config.rs  custom_saves.rs  db.rs  decky_install.rs  diagnostics.rs  drives.rs  error.rs  gamemode.rs  gamepad.rs  guided_install.rs  headless.rs  hydra.rs  lan.rs  launcher.rs  lib.rs  library.rs  ludusavi.rs  ludusavi_config.rs  main.rs  metadata.rs  metadata_backfill.rs  move_install.rs  offline.rs  paths.rs  plugin_server.rs  proc_lock.rs  process.rs  proton.rs  rclone.rs  redirects.rs  registry.rs  repack_install.rs  runner.rs  save_template.rs  session.rs  size_backfill.rs  steam.rs  (+12 more)
tauri/src-tauri/src/lan/: discovery.rs  install.rs  manifest_cache.rs  mod.rs  server.rs
tauri/src-tauri/src/plugin_server/: lan.rs  library.rs  mod.rs  proton.rs  saves.rs  session.rs  steam.rs
tauri/src/__mocks__/: app-navigation.ts
tauri/src/lib/: GameCard.svelte  api.ts  clock.svelte.ts  confirm.svelte.ts  format.test.ts  format.ts  gameDialog.svelte.ts  library.svelte.ts  library.test.ts  libraryEvents.ts  modalStack.svelte.ts  moveInstall.svelte.ts  nav.ts  pathMatch.test.ts  pathMatch.ts  removeGame.svelte.ts  steamRestart.ts  toasts.svelte.ts  tokens.ts  transfers.ts  types.ts  uiMode.svelte.ts  updater.ts  virtualKeyboard.ts
tauri/src/routes/: +layout.svelte  +page.svelte
website/: README.md  astro.config.mjs
(+180 files in other folders)
