[package]
name = "spool"
version = "0.1.0"
description = "Spool – game library with ludusavi save management"
authors = ["akinzett@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1", features = ["process", "io-util", "rt", "macros", "sync", "time", "net"] }
uuid = { version = "1.23.1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
steamlocate = "2"
steam_shortcuts_util = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
socket2 = "0.5"
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1", "query"] }
walkdir = "2"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
urlencoding = "2"
blake3 = "1"
filetime = "0.2"
serde_yaml = "0.9"

# Linux-only: systemd-logind D-Bus client (zbus) for the suspend watcher
# that keeps the play-state lock alive across a Steam Deck sleep.
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Windows-only: registry probe for the per-exe Run-As-Admin
# compatibility flag, and ShellExecuteExW-based elevated launch.
[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3.27.0"

