[package]
name = "spool"
version = "0.1.0"
description = "Spool – game library with ludusavi save management"
authors = ["akinzett@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
# Library storage. SQLite via sqlx so multiple Spool processes (the tray GUI,
# attached `--run` launches, the headless Decky server) can write the same
# library concurrently without the whole-document JSON clobbering each other.
# Runtime-checked queries (query/query_as) — no compile-time DATABASE_URL or
# `.sqlx` offline cache needed, so CI builds unchanged.
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "chrono"] }
dirs = "6"
thiserror = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
tauri-plugin-os = "2"
tokio = { version = "1", features = ["process", "io-util", "rt", "macros", "sync", "time", "net"] }
uuid = { version = "1.23.1", features = ["v4"] }
# OS hostname via the gethostname(2) syscall (GetComputerNameExW on Windows).
# The shell's $HOSTNAME isn't exported to GUI processes, so reading the env
# alone leaves Linux launches stuck on the "Spool device" fallback.
gethostname = "1.1.0"
reqwest = { version = "0.13", features = ["json", "stream", "query"] }
steamlocate = "2"
steam_shortcuts_util = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
socket2 = "0.6"
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1", "query"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower-service = "0.3"
tower-http = { version = "0.6", features = ["fs", "cors"] }
walkdir = "2"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
urlencoding = "2"
blake3 = "1"
base64 = "0.22"
filetime = "0.2"
serde_yaml = "0.9"
pelite = "0.10"
# Use gilrs's XInput backend on Windows, not the default WGI one: WGI delivers
# device events only to a thread running a Windows message pump, but our gamepad
# bridge polls on a bare worker thread, so WGI detects nothing. XInput is
# poll-based (no pump) and covers Xbox-style + Steam-virtual pads. The feature is
# Windows-only — Linux (evdev) / macOS (IOKit) ignore it and still build.
gilrs = { version = "0.11.2", default-features = false, features = ["xinput"] }

# Linux-only: systemd-logind D-Bus client (zbus) for the suspend watcher
# that keeps the play-state lock alive across a Steam Deck sleep.
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Windows-only: registry probe for the per-exe Run-As-Admin
# compatibility flag, and ShellExecuteExW-based elevated launch.
[target.'cfg(windows)'.dependencies]
winreg = "0.56"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3.27.0"

